[package]
name = "rusnet"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"
description = "An extremely basic network protocol."
documentation = "https://docs.rs/rusnet"
repository = "https://github.com/tduck973564/rusnet"
readme = "../README.md"
keywords = ["network", "network-protocol", "protocol", "tcp"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
